# djangorestframework-stubs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  changelog.txt  dev-requirements.txt  flake8-pyi.ini  mypy.ini  pyproject.toml  pytest.ini  reformat.xsh  release.sh  requirements.txt  setup.cfg  setup.py
.github/: renovate.json
.github/workflows/: misspel.yml  release.yml  test.yml
mypy_drf_plugin/: helpers.py  main.py  monkeypatch.py
mypy_drf_plugin/lib/: fullnames.py  helpers.py
mypy_drf_plugin/transformers/: fields.py  serializers.py  validation.py
mypy_rest_framework_plugin/: run_validation_returns_typeddict.py
rest_framework-stubs/: __init__.pyi  apps.pyi  authentication.pyi  checks.pyi  compat.pyi  decorators.pyi  documentation.pyi  exceptions.pyi  fields.pyi  filters.pyi  generics.pyi  metadata.pyi  mixins.pyi  negotiation.pyi  pagination.pyi  parsers.pyi  permissions.pyi  relations.pyi  renderers.pyi  request.pyi  response.pyi  reverse.pyi  routers.pyi  serializers.pyi  settings.pyi  status.pyi  test.pyi  throttling.pyi  urlpatterns.pyi  urls.pyi  validators.pyi  versioning.pyi  views.pyi  viewsets.pyi
rest_framework-stubs/authtoken/: __init__.pyi  admin.pyi  apps.pyi  models.pyi  serializers.pyi  views.pyi
rest_framework-stubs/authtoken/management/commands/: drf_create_token.pyi
rest_framework-stubs/management/commands/: generateschema.pyi
rest_framework-stubs/schemas/: __init__.pyi  coreapi.pyi  generators.pyi  inspectors.pyi  openapi.pyi  utils.pyi  views.pyi
rest_framework-stubs/templatetags/: rest_framework.pyi
rest_framework-stubs/utils/: breadcrumbs.pyi  encoders.pyi  field_mapping.pyi  formatting.pyi  html.pyi  humanize_datetime.pyi  json.pyi  mediatypes.pyi  model_meta.pyi  representation.pyi  serializer_helpers.pyi  urls.pyi
scripts/: build_import_all_test.py  drf_tests_settings.py  enabled_test_modules.py  git_helpers.py  ignored.py  mypy.ini  mypy_django.ini  paths.py  stubgen-drf.py  stubtest.sh  tests_extension_hook.py  typecheck_tests.py
scripts/stubtest/: allowlist.txt  allowlist_todo.txt  allowlist_todo_317.txt
test/: plugins.ini  test_djangorestframework.py
test-data/: plugins.ini
test-data/typecheck/: all_imports.test  check-serializer-run-validation.test  model_instances.test  model_serializer_validation.test  serializer_classes.test  serializer_validation.test  serializers.test  test_all_imports.yml  test_client.test  test_decorators.yml  test_fields.yml  test_serializers.yml  test_views.yml  validation.test
test/test-data/: check-serializer-run-validation.test
tests/: plugins.ini
tests/assert_type/: compat.py  decorators.py  exceptions.py  fields.py  filters.py  mixins.py  pagination.py  request.py  routers.py  serializers.py  test.py  validators.py  views.py
tests/typecheck/: test_all_imports.yml  test_api_client.yml  test_compat.yml  test_decorators.yml  test_exceptions.yml  test_fields.yml  test_filters.yml  test_mixins.yml  test_pagination.yml  test_request.yml  test_routers.yml  test_serializers.yml  test_test.yml  test_views.yml
