[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangorestframework-stubs"
version = "3.16.1"
requires-python = ">=3.10"
description = "Mypy stubs for Django"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Maksim Kurnikov", email = "maxim.kurnikov@gmail.com" },
]
maintainers = [
    { name = "Marti Raudsepp", email = "marti@juffo.org" },
    { name = "Nikita Sobolev", email = "mail@sobolevn.me" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: Django",
]
dependencies = [
    "django-stubs>=5.2.1",
    "typing-extensions>=4.0",
    "requests>=2.0",
    # Types:
    "types-requests",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/typeddjango/djangorestframework-stubs"
Funding = "https://github.com/sponsors/typeddjango"
"Release notes" = "https://github.com/typeddjango/djangorestframework-stubs/releases"

[project.optional-dependencies]
compatible-mypy = ["mypy>=1.13,<1.18", "django-stubs[compatible-mypy]"]
coreapi = ["coreapi>=2.0.0"]
markdown = ["types-Markdown>=0.1.5"]

[dependency-groups]
dev = [
    "wheel",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-mypy-plugins==3.2.0",
    "djangorestframework==3.16.0",

    "django-stubs[compatible-mypy] @ git+https://github.com/typeddjango/django-stubs",
    "django-stubs-ext @ git+https://github.com/typeddjango/django-stubs#subdirectory=ext",
    "djangorestframework-stubs[compatible-mypy,coreapi,markdown]",

    "types-pytz==2025.2.0.20250516",
    "types-requests==2.32.4.20250611",
    "types-urllib3==1.26.25.14",
    "types-Pygments==2.19.0.20250516",
    "types-pyyaml==6.0.12.20250516",
]

[tool.hatch.build]
packages = ["djangorestframework-stubs"]

[tool.hatch.build.targets.wheel]
#packages = ["rest_framework-stubs"]

[tool.ruff]
line-length = 120
target-version = "py310"

# See Rules in Ruff documentation: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "B",        # bugbear
    "E",        # pycodestyle
    "F",        # pyflakes
    "INP",      # flake8-tidy-imports
    "W",        # pycodestyle
    "I",        # isort
    "UP",       # pyupgrade
    "TID251",   # Disallowed imports (flake8-tidy-imports.banned-api)
    "PYI",      # flake8-pyi
    "RUF100",   # Equivalent to flake8-noqa NQA103
    "PGH004",   # Equivalent to flake8-noqa NQA104
    "PGH003",   # Disallowed blanket `type: ignore` annotations.
]
ignore = ["PYI021", "PYI024", "PYI041", "PYI043"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
    "B",
    "E501",
    "E741",
    "E743",
    "F403", # Use wildcard import
    "F405",
    "F822",
    "F821",
    "PGH003",  # TODO fix these errors
]
"rest_framework-stubs/compat.pyi" = ["PYI042"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"_typeshed.Self".msg = "Use typing_extensions.Self (PEP 673) instead."

[tool.ruff.lint.isort]
split-on-trailing-comma = false
extra-standard-library = ["_typeshed"]
