[flake8]
exclude =
    .venv
    .idea
    .mypy_cache
    .venv

max_line_length = 120
per-file-ignores =
    *__init__.pyi: F401
    rest_framework-stubs/serializers.pyi: F401
    rest_framework-stubs/decorators.pyi: F401
    rest_framework-stubs/fields.pyi: F401
    rest_framework-stubs/authentication.pyi: F401
    rest_framework-stubs/generics.pyi: F401
    rest_framework-stubs/response.pyi: F401
    rest_framework-stubs/utils/serializer_helpers.pyi: F401

[metadata]
license_file = LICENSE.txt
