[flake8]
exclude =
    .venv
    .idea
    .mypy_cache
    .venv

max_line_length = 120
per-file-ignores =
    *.pyi: B, E301, E302, E305, E501, E701, E741, E743, NQA102, F401, F403, F405, F822, Y021, Y024, Y041, Y043
    rest_framework-stubs/compat.pyi: B, E301, E302, E305, E501, E701, E741, E743, NQA102, F401, F403, F405, F822, Y021, Y024, Y041, Y043, Y026, Y002, F811
[metadata]
license_file = LICENSE.txt
